--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "autoprefixer": "^9.8.8",
+    "axios": "^0.27.2",
     "gridsome": "^0.7.23",
     "postcss": "^7.0.39",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
