--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "autoprefixer": "^9.8.8",
     "axios": "^0.27.2",
     "gridsome": "^0.7.23",
+    "gridsome-plugin-algolia": "^2.1.4",
     "postcss": "^7.0.39",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   }
