--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gridsome": "^0.7.23",
     "gridsome-plugin-algolia": "^2.1.4",
     "postcss": "^7.0.39",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
+    "vue-carousel": "^0.18.0"
   }
 }
